# gottawork

./: .gitmodules  PRD_괴담출근_통합_인트라넷_v3.md  README.md
storage/: 고증_반영_분석.md  무명찬란교.md  작품_개요.md  재난_데이터베이스.md  초자연_재난관리국.md
universe_agent/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
universe_agent/agents/: persona.py  researcher.py
universe_agent/personas/: choiyowon-persona.md  hoyuwon-persona.md  kimsoleum-persona.md  ryujaegwan-persona.md
universe_agent/storage/: markdown_exporter.py  vector_store.py  백일몽_주식회사.md  세광특별시.md  어둠_데이터베이스.md  유쾌연구소.md
universe_agent/tools/: community_scraper.py  google_search.py  twitter_search.py  web_scraper.py
